# fivem-utility

./: Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: artifacts.rs  config.rs  main.rs
