[package]
name = "fivem-utility"
version = "0.3.0"
authors = ["Lily H <bsalarius@gmail.com>"]
description = "Provides various useful utilities for FiveM servers"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
regex = "1.5.5"
